# choretracker

./: .dockerignore  .gitignore  AGENTS.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
choretracker/: app.py  calendar.py  settings.py  time_utils.py  users.py
migrations/: env.py
scripts/: test.py  test.sh
tests/: test_calendar_entry_instances.py  test_calendar_list_active_past.py  test_calendar_list_disambiguation.py  test_chore_completions_page.py  test_completed_chore_visibility.py  test_completion_cascade.py  test_delegate_instance.py  test_description_markdown.py  test_description_sanitized.py  test_edit_past_instance_specifics.py  test_edit_split_behavior.py  test_entry_delete_restrictions.py  test_entry_managers.py  test_first_instance_delegation.py  test_hide_due_when_completed.py  test_index_sort_order.py  test_inline_edit.py  test_instance_duration_override.py  test_instance_notes.py  test_instance_start_override.py  test_login_csrf.py  test_migration_recurrence_json.py  test_new_entry_form_action.py  test_non_admin_past_entry.py  test_overlapping_upcoming.py  test_profile_picture_cache_control.py  test_recurrence_add_delete.py  test_recurrence_edit_ui.py  test_recurrence_first_start_duration.py  test_recurrence_summary.py  test_recurrence_update.py  test_responsible_overrides.py  test_session_invalid_user.py  test_single_instance_link.py  test_split_description.py  test_switch_target_redirect.py  test_system_page.py  test_time_utils.py  test_timeperiod_completed_by.py  test_unauthorized_completion.py  (+7 more)
(+27 files in other folders)
