[project]
name = "choretracker"
version = "0.1.0"
description = "Simple chore tracker web app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "jinja2>=3.1.6",
    "sqlmodel>=0.0.24",
    "alembic>=1.16.4",
    "itsdangerous>=2.2.0",
    "apscheduler>=3.11.0",
    "markdown>=3.9",
    "bleach>=6.2",
    "python-multipart>=0.0.20",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1",
    "Pillow>=10.0.0",
    "tzdata>=2024.1",
]
